mobile view update

--- a/style.css
+++ b/style.css
@@ -134,4 +134,16 @@ input{
         margin-top: 25px;
     }
 
+    .com{
+        border-radius: 0px 0px 5px 5px;
+    }
+
+    .rx{
+        border-radius: 0 0 5px 5px;
+    }
+
+    .box-header{
+        border-radius: 5px 5px 0 0;
+    }
+
 }
